--- a/02-experiment-tracking/running-mlflow-examples/scenario-2.ipynb
+++ b/02-experiment-tracking/running-mlflow-examples/scenario-2.ipynb
@@ -203,19 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'MlflowClient' object has no attribute 'list_run_infos'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m run_id \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlist_run_infos\u001b[49m(experiment_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mrun_id\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# mlflow.register_model(\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#     model_uri=f\"runs:/{run_id}/models\",\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#     name='iris-classifier'\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# )\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'MlflowClient' object has no attribute 'list_run_infos'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'iris-classifier'.\n",
+      "2023/12/22 00:43:19 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: iris-classifier, version 1\n",
+      "Created version '1' of model 'iris-classifier'.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=[], creation_timestamp=1703205799883, current_stage='None', description='', last_updated_timestamp=1703205799883, name='iris-classifier', run_id='b2e824f86b3a4bc0b5e15734bdf8131a', run_link='', source='/home/pytholic/mlops-zoomcamp-pytholic/02-experiment-tracking/running-mlflow-examples/artifacts_local/1/b2e824f86b3a4bc0b5e15734bdf8131a/artifacts/models', status='READY', status_message='', tags={}, user_id='', version='1'>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
