prefect initial run

--- a/02-experiment-tracking/running-mlflow-examples/scenario-3.ipynb
+++ b/02-experiment-tracking/running-mlflow-examples/scenario-3.ipynb
@@ -58,8 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Experiment: artifact_location='gs://mlflow-artifacts-bucket-1/mlruns/1', creation_time=1703231367704, experiment_id='1', last_update_time=1703231367704, lifecycle_stage='active', name='my-experiment-1', tags={}>,\n",
-       " <Experiment: artifact_location='gs://mlflow-artifacts-bucket-1/mlruns/0', creation_time=1703229387105, experiment_id='0', last_update_time=1703229387105, lifecycle_stage='active', name='Default', tags={}>]"
+       "[<Experiment: artifact_location='gs://mlflow-artifacts-bucket-1/mlruns/0', creation_time=1703340769879, experiment_id='0', last_update_time=1703340769879, lifecycle_stage='active', name='Default', tags={}>]"
       ]
      },
      "execution_count": 3,
@@ -79,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "'gs://mlflow-artifacts-bucket-1/mlruns/0/80c1cf8a048b451586055063fa4c5037/artifacts'"
+       "'gs://mlflow-artifacts-bucket-1/mlruns/0/cebd9f8b0bb74bdeab7277917bd64f24/artifacts'"
       ]
      },
      "execution_count": 4,
@@ -106,10 +105,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023/12/23 14:13:24 INFO mlflow.tracking.fluent: Experiment with name 'my-experiment-1' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "default artifacts URI: 'gs://mlflow-artifacts-bucket-1/mlruns/1/bb9b7a0c3a1f464193e1586f4b49c78d/artifacts'\n"
+      "default artifacts URI: 'gs://mlflow-artifacts-bucket-1/mlruns/1/4626248fb7714d80a12d6ffd1a021976/artifacts'\n"
      ]
     }
    ],
@@ -144,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +162,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client.search_registered_models()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs = client.search_runs(\n",
+    "    experiment_ids=\"1\",\n",
+    "    max_results=3,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4626248fb7714d80a12d6ffd1a021976\n"
+     ]
+    }
+   ],
+   "source": [
+    "run = runs[0]\n",
+    "run_id = run.info.run_id\n",
+    "print(run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'iris-classifier'.\n",
+      "2023/12/23 14:13:27 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: iris-classifier, version 1\n",
+      "Created version '1' of model 'iris-classifier'.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=[], creation_timestamp=1703340807797, current_stage='None', description='', last_updated_timestamp=1703340807797, name='iris-classifier', run_id='4626248fb7714d80a12d6ffd1a021976', run_link='', source='gs://mlflow-artifacts-bucket-1/mlruns/1/4626248fb7714d80a12d6ffd1a021976/artifacts/models', status='READY', status_message='', tags={}, user_id='', version='1'>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.register_model(\n",
+    "    model_uri=f\"runs:/{run_id}/models\",\n",
+    "    name='iris-classifier'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
