batch deployment - score script

--- a/04-deployment/batch/score.ipynb
+++ b/04-deployment/batch/score.ipynb
@@ -10,6 +10,7 @@
     "import mlflow\n",
     "import pickle\n",
     "import pandas as pd\n",
+    "import uuid\n",
     "\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -20,44 +21,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/01/15 12:27:29 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
-      " - psutil (current: 5.9.0, required: psutil==5.9.7)\n",
-      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Load model\n",
+    "year = 2021\n",
+    "month = 3\n",
+    "taxi_type = \"green\"\n",
+    "\n",
+    "if not os.path.exists(f\"output/{taxi_type}\"): \n",
+    "    os.makedirs(f\"output/{taxi_type}\") \n",
+    "\n",
+    "input_file = f\"https://d37ci6vzurychx.cloudfront.net/trip-data/{taxi_type}_tripdata_{year:04d}-{month:02d}.parquet\"  # download from link\n",
+    "output_file = f\"output/{taxi_type}/{year:04d}-{month:02d}.parquet\"\n",
+    "\n",
     "EXPERIMENT_ID = 1\n",
     "RUN_ID = os.getenv(\"RUN_ID\", \"553def03f5224f649fe56bc1567daccc\")\n",
     "logged_model = f\"gs://pytholic-mlops-zoomcamp-artifacts/{EXPERIMENT_ID}/{RUN_ID}/artifacts/model\"\n",
-    "model = mlflow.pyfunc.load_model(logged_model)\n",
-    "\n",
     "service_account_key_path = os.path.expanduser('~') + \"/service_account_key.json\"\n",
     "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = service_account_key_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def gen_uuids(n):\n",
+    "    ride_ids = []\n",
+    "    for i in range(n):\n",
+    "        ride_ids.append(str(uuid.uuid4()))\n",
+    "    return ride_ids\n",
+    "\n",
     "def read_dataframe(filename: str):\n",
     "    df = pd.read_parquet(filename)\n",
     "\n",
     "    df['duration'] = df.lpep_dropoff_datetime - df.lpep_pickup_datetime\n",
     "    df.duration = df.duration.dt.total_seconds() / 60\n",
     "    df = df[(df.duration >= 1) & (df.duration <= 60)]    \n",
-    "    return df\n",
     "\n",
+    "    df[\"ride_id\"] = gen_uuids(len(df))\n",
+    "    return df\n",
     "\n",
     "def prepare_dictionaries(df: pd.DataFrame):\n",
     "    categorical = ['PULocationID', 'DOLocationID']\n",
@@ -71,298 +76,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_dataframe('../../data/green_tripdata_2021-01.parquet')\n",
-    "dicts = prepare_dictionaries(df)\n",
+    "def load_model(experiment_id, run_id):\n",
+    "    logged_model = f\"gs://pytholic-mlops-zoomcamp-artifacts/{experiment_id}/{run_id}/artifacts/model\"\n",
+    "    model = mlflow.pyfunc.load_model(logged_model)\n",
+    "    return model\n",
+    "    \n",
     "\n",
-    "y_pred = model.predict(dicts)"
+    "def apply_model(input_file, experiment_id, run_id, output_file):\n",
+    "\n",
+    "    df = read_dataframe(input_file)\n",
+    "    dicts = prepare_dictionaries(df)\n",
+    "\n",
+    "    model = load_model(experiment_id, run_id)\n",
+    "    y_pred = model.predict(dicts)\n",
+    "\n",
+    "    df_result = pd.DataFrame()\n",
+    "    df_result[\"ride_id\"] = df[\"ride_id\"]\n",
+    "    df_result[\"lpep_pickup_datetime\"] = df[\"lpep_pickup_datetime\"]\n",
+    "    df_result[\"PULocationID\"] = df[\"PULocationID\"]\n",
+    "    df_result[\"DOLocationID\"] = df[\"DOLocationID\"]\n",
+    "    df_result[\"actual_duration\"] = df[\"duration\"]\n",
+    "    df_result[\"predicted_duration\"] = y_pred\n",
+    "    df_result[\"diff\"] = df_result[\"actual_duration\"] - df_result[\"predicted_duration\"]\n",
+    "    df_result[\"model_version\"] = RUN_ID\n",
+    "\n",
+    "    df_result.to_parquet(output_file, index=False)\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 6.86271117, 13.36872083,  6.3608707 , ..., 14.43650924,\n",
-       "       37.09262214, 11.10083955])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/01/16 08:57:22 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - psutil (current: 5.9.0, required: psutil==5.9.7)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
+     ]
     }
    ],
    "source": [
-    "y_pred"
+    "apply_model(input_file, EXPERIMENT_ID, RUN_ID, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import uuid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = len(df)\n",
-    "ride_ids = []\n",
-    "for i in range(n):\n",
-    "    ride_ids.append(str(uuid.uuid4()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>VendorID</th>\n",
-       "      <th>lpep_pickup_datetime</th>\n",
-       "      <th>lpep_dropoff_datetime</th>\n",
-       "      <th>store_and_fwd_flag</th>\n",
-       "      <th>RatecodeID</th>\n",
-       "      <th>PULocationID</th>\n",
-       "      <th>DOLocationID</th>\n",
-       "      <th>passenger_count</th>\n",
-       "      <th>trip_distance</th>\n",
-       "      <th>fare_amount</th>\n",
-       "      <th>...</th>\n",
-       "      <th>tolls_amount</th>\n",
-       "      <th>ehail_fee</th>\n",
-       "      <th>improvement_surcharge</th>\n",
-       "      <th>total_amount</th>\n",
-       "      <th>payment_type</th>\n",
-       "      <th>trip_type</th>\n",
-       "      <th>congestion_surcharge</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>PU_DO</th>\n",
-       "      <th>ride_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-01-01 00:15:56</td>\n",
-       "      <td>2021-01-01 00:19:52</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>43</td>\n",
-       "      <td>151</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>6.80</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>3.933333</td>\n",
-       "      <td>43_151</td>\n",
-       "      <td>1e7361ca-4ad3-4073-86b7-acf0d637df22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-01-01 00:25:59</td>\n",
-       "      <td>2021-01-01 00:34:44</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>166</td>\n",
-       "      <td>239</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>16.86</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>8.750000</td>\n",
-       "      <td>166_239</td>\n",
-       "      <td>1255ace2-8353-4ceb-93f5-0f2d16dd874a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-01-01 00:45:57</td>\n",
-       "      <td>2021-01-01 00:51:55</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>41</td>\n",
-       "      <td>42</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.12</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>8.30</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.966667</td>\n",
-       "      <td>41_42</td>\n",
-       "      <td>d766694e-0f84-4a3f-9a0c-55075c8a9192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2020-12-31 23:57:51</td>\n",
-       "      <td>2021-01-01 00:04:56</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>168</td>\n",
-       "      <td>75</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.99</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>9.30</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>7.083333</td>\n",
-       "      <td>168_75</td>\n",
-       "      <td>298e7339-dcee-478e-a667-1ce612c4c1a4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-01-01 00:26:31</td>\n",
-       "      <td>2021-01-01 00:28:50</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>75</td>\n",
-       "      <td>75</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>5.76</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2.316667</td>\n",
-       "      <td>75_75</td>\n",
-       "      <td>0546a037-a094-4808-8ff5-ad0f3f399b35</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   VendorID lpep_pickup_datetime lpep_dropoff_datetime store_and_fwd_flag  \\\n",
-       "0         2  2021-01-01 00:15:56   2021-01-01 00:19:52                  N   \n",
-       "1         2  2021-01-01 00:25:59   2021-01-01 00:34:44                  N   \n",
-       "2         2  2021-01-01 00:45:57   2021-01-01 00:51:55                  N   \n",
-       "3         2  2020-12-31 23:57:51   2021-01-01 00:04:56                  N   \n",
-       "7         2  2021-01-01 00:26:31   2021-01-01 00:28:50                  N   \n",
-       "\n",
-       "   RatecodeID PULocationID DOLocationID  passenger_count  trip_distance  \\\n",
-       "0         1.0           43          151              1.0           1.01   \n",
-       "1         1.0          166          239              1.0           2.53   \n",
-       "2         1.0           41           42              1.0           1.12   \n",
-       "3         1.0          168           75              1.0           1.99   \n",
-       "7         1.0           75           75              6.0           0.45   \n",
-       "\n",
-       "   fare_amount  ...  tolls_amount  ehail_fee  improvement_surcharge  \\\n",
-       "0          5.5  ...           0.0       None                    0.3   \n",
-       "1         10.0  ...           0.0       None                    0.3   \n",
-       "2          6.0  ...           0.0       None                    0.3   \n",
-       "3          8.0  ...           0.0       None                    0.3   \n",
-       "7          3.5  ...           0.0       None                    0.3   \n",
-       "\n",
-       "   total_amount payment_type  trip_type  congestion_surcharge  duration  \\\n",
-       "0          6.80          2.0        1.0                  0.00  3.933333   \n",
-       "1         16.86          1.0        1.0                  2.75  8.750000   \n",
-       "2          8.30          1.0        1.0                  0.00  5.966667   \n",
-       "3          9.30          2.0        1.0                  0.00  7.083333   \n",
-       "7          5.76          1.0        1.0                  0.00  2.316667   \n",
-       "\n",
-       "     PU_DO                               ride_id  \n",
-       "0   43_151  1e7361ca-4ad3-4073-86b7-acf0d637df22  \n",
-       "1  166_239  1255ace2-8353-4ceb-93f5-0f2d16dd874a  \n",
-       "2    41_42  d766694e-0f84-4a3f-9a0c-55075c8a9192  \n",
-       "3   168_75  298e7339-dcee-478e-a667-1ce612c4c1a4  \n",
-       "7    75_75  0546a037-a094-4808-8ff5-ad0f3f399b35  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-02.parquet  2021-03.parquet\n"
+     ]
     }
    ],
    "source": [
-    "df[\"ride_id\"] = ride_ids\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_result = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_result[\"ride_id\"] = df[\"ride_id\"]"
+    "!ls output/green"
    ]
   },
   {
