--- a/02-experiment-tracking/01-mlflow-tracking.ipynb
+++ b/02-experiment-tracking/01-mlflow-tracking.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.linear_model import LinearRegression, Lasso\n",
     "from sklearn.metrics import mean_squared_error"
    ]
   },
@@ -317,14 +317,6 @@
     "    rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
     "    mlflow.log_metric(\"rmse\", rmse)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c0fd026",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
