[chore] Local environment setup, deployment testing

--- a/02-experiment-tracking/running-mlflow-examples/scenario-3.ipynb
+++ b/02-experiment-tracking/running-mlflow-examples/scenario-3.ipynb
@@ -29,8 +29,10 @@
     "TRACKING_SERVER_HOST = \"34.64.84.237\" # fill in with the public DNS of the EC2 instance\n",
     "mlflow.set_tracking_uri(f\"http://{TRACKING_SERVER_HOST}:5000\")\n",
     "\n",
-    "service_account_key_path = \"../../../service_account_key.json\"\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = service_account_key_path\n"
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "\n",
+    "load_dotenv(find_dotenv())\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = os.getenv(\"GCS_ACCESS_TOKEN\")\n"
    ]
   },
   {
