--- a/04-deployment/batch/score.ipynb
+++ b/04-deployment/batch/score.ipynb
@@ -8,15 +8,9 @@
    "source": [
     "import os\n",
     "import mlflow\n",
-    "import pickle\n",
     "import pandas as pd\n",
     "import uuid\n",
-    "\n",
-    "from sklearn.feature_extraction import DictVectorizer\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "from sklearn.pipeline import make_pipeline"
+    "\n"
    ]
   },
   {
@@ -38,8 +32,10 @@
     "EXPERIMENT_ID = 1\n",
     "RUN_ID = os.getenv(\"RUN_ID\", \"553def03f5224f649fe56bc1567daccc\")\n",
     "logged_model = f\"gs://pytholic-mlops-zoomcamp-artifacts/{EXPERIMENT_ID}/{RUN_ID}/artifacts/model\"\n",
-    "service_account_key_path = os.path.expanduser('~') + \"/service_account_key.json\"\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = service_account_key_path"
+    "\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "load_dotenv(find_dotenv())\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = os.getenv(\"GCS_ACCESS_TOKEN\")"
    ]
   },
   {
