--- a/04-deployment/web-service-mlflow/random_forest.ipynb
+++ b/04-deployment/web-service-mlflow/random_forest.ipynb
@@ -30,8 +30,9 @@
     "mlflow.set_tracking_uri(MLFLOW_TRACKING_URI)\n",
     "mlflow.set_experiment(\"green-taxi-duration\")\n",
     "\n",
-    "service_account_key_path = os.path.expanduser('~') + \"/service_account_key.json\"\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = service_account_key_path"
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "load_dotenv(find_dotenv())\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = os.getenv(\"GCS_ACCESS_TOKEN\")"
    ]
   },
   {
